--- a/src/app/screens/login/login.component.html
+++ b/src/app/screens/login/login.component.html
@@ -3,13 +3,13 @@
     <h1 class="login-box-title">Bienvenido</h1>
   </div>
   <form class="login-box-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()" autocomplete="off">
-    <app-input id="username" class="login-box-form-input" label="Usuario" formControlName="username"
+    <app-input id="username" data-cy="username" class="login-box-form-input" label="Usuario" formControlName="username"
       [errorMessage]="getErrorMessage('username')">
     </app-input>
-    <app-input id="password" class="login-box-form-input" label="Contraseña" formControlName="password"
+    <app-input id="password" data-cy="password" class="login-box-form-input" label="Contraseña" formControlName="password"
       [errorMessage]="getErrorMessage('password')" type="password">
     </app-input>
-    <button id="button-login" type="submit" class="button success block login-box-form-submit"
+    <button id="button-login" data-cy="button-login" type="submit" class="button success block login-box-form-submit"
       [disabled]="validateSubmitDisabled()">Ingresar</button>
   </form>
 </div>
